--- a/todo/style.css
+++ b/todo/style.css
@@ -1,9 +1,11 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 3%;
+    background-color: dodgerblue;
 }
 div {
     border: 1px solid black;
+    background-color: white;
 }
 
 input {
@@ -23,4 +25,5 @@ button {
 
 h1 {
     text-align: center;
+    color: white;
 }
