--- a/games/styles.css
+++ b/games/styles.css
@@ -1,13 +1,48 @@
 body {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-main {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     max-width: 450px;
     text-align: center;
+    margin:auto;
+    background-color: darkslategray;
+}
+
+h1 {
+    color: white;
+}
+
+.green {
+    color: azure;
+    background-color: green;
 }
 
 div {
     background-color: gray;
     color: white;
+    padding: 5px;
+}
+
+.gameItem {
+    background-color: cornsilk;
+    color: black;
+}
+
+.red {
+    background-color: red;
+}
+
+.blue {
+    background-color: navy;
+}
+
+.dark {
+    background-color: black;
+}
+
+.divbutton {
+    border: solid black 2px;
+    background-color: aliceblue;
+    color: dodgerblue;
+    width: 90%;
+    margin: auto;
+    padding: 0px;
 }
